opam-version: "1.2"
name: "obeam"
version: "0.0.3"
maintainer: "yutopp <yutopp@gmail.com>"
author: "yutopp <yutopp@gmail.com>"
homepage: "https://github.com/yutopp/obeam"
bug-reports: "https://github.com/yutopp/obeam/issues"
license: "Boost License Version 1.0"
dev-repo: "https://github.com/yutopp/obeam.git"

available: [ocaml-version >= "4.04.2"]

build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [
  ["jbuilder" "runtest" "-p" name]
]

depends: [
  "bitstring"     {>= "2.0.4"}
  "ppx_bitstring" {>= "2.0.2"}
  "ppx_deriving"  {>= "4.2"}
  "camlzip"       {>= "1.07"}
  "jbuilder"      {build}
  "ounit"         {build}
  "bisect_ppx"    {build}
]
